--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       <option value="binancecoin">Binance Coin (BNB)</option>
       <option value="solana">Solana (SOL)</option>
       <option value="ripple">Ripple (XRP)</option>
+      <option value="cardano">Cardano (ADA)</option>
+      <option value="dogecoin">Dogecoin (DOGE)</option>
+      <option value="tron">TRON (TRX)</option>
+      <option value="polkadot">Polkadot (DOT)</option>
     </select>
 
     <label>To (Fiat Only)</label>
@@ -68,6 +72,13 @@
       <option value="usd">US Dollar (USD)</option>
       <option value="eur">Euro (EUR)</option>
       <option value="zmw">Zambian Kwacha (ZMW)</option>
+      <option value="gbp">British Pound (GBP)</option>
+      <option value="ngn">Nigerian Naira (NGN)</option>
+      <option value="kes">Kenyan Shilling (KES)</option>
+      <option value="inr">Indian Rupee (INR)</option>
+      <option value="jpy">Japanese Yen (JPY)</option>
+      <option value="cad">Canadian Dollar (CAD)</option>
+      <option value="aud">Australian Dollar (AUD)</option>
     </select>
 
     <button onclick="convertCrypto()">Convert</button>
