--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CryptoConvertor</title>
+  <!-- Google AdSense script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8541037471423035"
+     crossorigin="anonymous"></script>
   <style>
     body {
       margin: 0;
@@ -45,10 +48,30 @@
       margin-top: 1.5rem;
       font-size: 1.2rem;
     }
+    .ads {
+      margin: 2rem 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
   </style>
 </head>
 <body>
   <h1>CryptoConvertor</h1>
+
+  <!-- AdSense ad block -->
+  <div class="ads">
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center;"
+         data-ad-client="ca-pub-8541037471423035"
+         data-ad-slot="YOUR-AD-SLOT-ID"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
   <div class="converter">
     <label>Amount</label>
     <input type="number" id="amount" placeholder="Enter amount" />
