--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <ins class="adsbygoogle"
          style="display:block; text-align:center;"
          data-ad-client="ca-pub-8541037471423035"
-         data-ad-slot="YOUR-AD-SLOT-ID"
+         data-ad-slot="1234567890"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
     <script>
@@ -81,27 +81,27 @@
       <option value="bitcoin">Bitcoin (BTC)</option>
       <option value="ethereum">Ethereum (ETH)</option>
       <option value="tether">Tether (USDT)</option>
-      <option value="binancecoin">Binance Coin (BNB)</option>
+      <option value="binancecoin">BNB</option>
       <option value="solana">Solana (SOL)</option>
-      <option value="ripple">Ripple (XRP)</option>
+      <option value="ripple">XRP</option>
       <option value="cardano">Cardano (ADA)</option>
       <option value="dogecoin">Dogecoin (DOGE)</option>
       <option value="tron">TRON (TRX)</option>
       <option value="polkadot">Polkadot (DOT)</option>
     </select>
 
-    <label>To (Fiat Only)</label>
+    <label>To</label>
     <select id="to">
-      <option value="usd">US Dollar (USD)</option>
-      <option value="eur">Euro (EUR)</option>
-      <option value="zmw">Zambian Kwacha (ZMW)</option>
-      <option value="gbp">British Pound (GBP)</option>
-      <option value="ngn">Nigerian Naira (NGN)</option>
-      <option value="kes">Kenyan Shilling (KES)</option>
-      <option value="inr">Indian Rupee (INR)</option>
-      <option value="jpy">Japanese Yen (JPY)</option>
-      <option value="cad">Canadian Dollar (CAD)</option>
-      <option value="aud">Australian Dollar (AUD)</option>
+      <option value="usd">USD</option>
+      <option value="eur">EUR</option>
+      <option value="zmw">ZMW</option>
+      <option value="gbp">GBP</option>
+      <option value="ngn">NGN</option>
+      <option value="kes">KES</option>
+      <option value="inr">INR</option>
+      <option value="jpy">JPY</option>
+      <option value="cad">CAD</option>
+      <option value="aud">AUD</option>
     </select>
 
     <button onclick="convertCrypto()">Convert</button>
@@ -110,7 +110,7 @@
 
   <script>
     async function convertCrypto() {
-      const amount = document.getElementById("amount").value;
+      const amount = parseFloat(document.getElementById("amount").value);
       const from = document.getElementById("from").value;
       const to = document.getElementById("to").value;
       const result = document.getElementById("result");
@@ -121,20 +121,20 @@
       }
 
       try {
-        const url = `https://api.coingecko.com/api/v3/simple/price?ids=${from}&vs_currencies=${to}`;
-        const res = await fetch(url);
-        const data = await res.json();
+        const response = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${from}&vs_currencies=${to}`);
+        const data = await response.json();
 
         if (!data[from] || !data[from][to]) {
-          result.innerText = "Conversion failed. Rate not found.";
+          result.innerText = "Conversion rate not available.";
           return;
         }
 
         const rate = data[from][to];
         const converted = amount * rate;
-        result.innerText = `${amount} ${from} = ${converted.toFixed(2)} ${to.toUpperCase()}`;
-      } catch (e) {
-        result.innerText = "Conversion failed. Please try again later.";
+
+        result.innerText = `${amount} ${from.charAt(0).toUpperCase() + from.slice(1)} = ${converted.toFixed(2)} ${to.toUpperCase()}`;
+      } catch (error) {
+        result.innerText = "Error fetching conversion rate. Please try again later.";
       }
     }
   </script>
