--- a/index.html
+++ b/index.html
@@ -1,40 +1,142 @@
-<div style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem;">
-  <label>To</label>
-  <img id="to-img" src="" alt="fiat" style="height: 25px;" />
-</div>
-<select id="to" onchange="updateToImage()">
-  <option value="usd">USD</option>
-  <option value="eur">EUR</option>
-  <option value="zmw">ZMW</option>
-  <option value="gbp">GBP</option>
-  <option value="ngn">NGN</option>
-  <option value="kes">KES</option>
-  <option value="inr">INR</option>
-  <option value="jpy">JPY</option>
-  <option value="cad">CAD</option>
-  <option value="aud">AUD</option>
-</select>
-<script>
-  const fiatImages = {
-    usd: "https://flagcdn.com/us.svg",
-    eur: "https://flagcdn.com/eu.svg",
-    zmw: "https://flagcdn.com/zm.svg",
-    gbp: "https://flagcdn.com/gb.svg",
-    ngn: "https://flagcdn.com/ng.svg",
-    kes: "https://flagcdn.com/ke.svg",
-    inr: "https://flagcdn.com/in.svg",
-    jpy: "https://flagcdn.com/jp.svg",
-    cad: "https://flagcdn.com/ca.svg",
-    aud: "https://flagcdn.com/au.svg"
-  };
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CryptoConverter</title>
+  <!-- Google AdSense script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8541037471423035"
+     crossorigin="anonymous"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0e0e0e;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+    }
+    h1 {
+      color: #00ffcc;
+    }
+    .converter {
+      background: #1e1e1e;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 255, 204, 0.2);
+      max-width: 400px;
+      width: 100%;
+    }
+    select, input {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+    button {
+      margin-top: 1rem;
+      padding: 0.7rem;
+      background: #00ffcc;
+      border: none;
+      font-size: 1rem;
+      cursor: pointer;
+      color: #000;
+    }
+    .result {
+      margin-top: 1.5rem;
+      font-size: 1.2rem;
+    }
+    .ads {
+      margin: 2rem 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
+  </style>
+</head>
+<body>
+  <h1>CryptoConvertor</h1>
 
-  function updateToImage() {
-    const to = document.getElementById("to").value;
-    document.getElementById("to-img").src = fiatImages[to];
-  }
+  <!-- AdSense ad block -->
+  <div class="ads">
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center;"
+         data-ad-client="ca-pub-8541037471423035"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
 
-  window.onload = function () {
-    updateFromImage();
-    updateToImage();
-  };
-</script>
+  <div class="converter">
+    <label>Amount</label>
+    <input type="number" id="amount" placeholder="Enter amount" />
+
+    <label>From</label>
+    <select id="from">
+      <option value="bitcoin">Bitcoin (BTC)</option>
+      <option value="ethereum">Ethereum (ETH)</option>
+      <option value="tether">Tether (USDT)</option>
+      <option value="binancecoin">BNB</option>
+      <option value="solana">Solana (SOL)</option>
+      <option value="ripple">XRP</option>
+      <option value="cardano">Cardano (ADA)</option>
+      <option value="dogecoin">Dogecoin (DOGE)</option>
+      <option value="tron">TRON (TRX)</option>
+      <option value="polkadot">Polkadot (DOT)</option>
+    </select>
+
+    <label>To</label>
+    <select id="to">
+      <option value="usd">USD</option>
+      <option value="eur">EUR</option>
+      <option value="zmw">ZMW</option>
+      <option value="gbp">GBP</option>
+      <option value="ngn">NGN</option>
+      <option value="kes">KES</option>
+      <option value="inr">INR</option>
+      <option value="jpy">JPY</option>
+      <option value="cad">CAD</option>
+      <option value="aud">AUD</option>
+    </select>
+
+    <button onclick="convertCrypto()">Convert</button>
+    <div class="result" id="result"></div>
+  </div>
+
+  <script>
+    async function convertCrypto() {
+      const amount = parseFloat(document.getElementById("amount").value);
+      const from = document.getElementById("from").value;
+      const to = document.getElementById("to").value;
+      const result = document.getElementById("result");
+
+      if (!amount || isNaN(amount)) {
+        result.innerText = "Please enter a valid amount.";
+        return;
+      }
+
+      try {
+        const response = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${from}&vs_currencies=${to}`);
+        const data = await response.json();
+
+        if (!data[from] || !data[from][to]) {
+          result.innerText = "Conversion rate not available.";
+          return;
+        }
+
+        const rate = data[from][to];
+        const converted = amount * rate;
+
+        result.innerText = `${amount} ${from.charAt(0).toUpperCase() + from.slice(1)} = ${converted.toFixed(2)} ${to.toUpperCase()}`;
+      } catch (error) {
+        result.innerText = "Error fetching conversion rate. Please try again later.";
+      }
+    }
+  </script>
+</body>
+</html>
