--- a/index.html
+++ b/index.html
@@ -2,82 +2,113 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CryptoConverter</title>
-  <!-- Google AdSense script -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8541037471423035"
-     crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Crypto Converter</title>
   <style>
+    :root {
+      --bg-dark: #0f0f0f;
+      --text-dark: #ffffff;
+      --bg-light: #ffffff;
+      --text-light: #000000;
+      --accent: #00ffcc;
+    }
+
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background: #0e0e0e;
-      color: #fff;
+      margin: 0;
+      padding: 2rem;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 2rem;
+      transition: background 0.3s, color 0.3s;
     }
+
+    .dark {
+      background: var(--bg-dark);
+      color: var(--text-dark);
+    }
+
+    .light {
+      background: var(--bg-light);
+      color: var(--text-light);
+    }
+
     h1 {
-      color: #00ffcc;
+      color: var(--accent);
     }
+
     .converter {
-      background: #1e1e1e;
+      background: rgba(0,0,0,0.1);
       padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 255, 204, 0.2);
       max-width: 400px;
       width: 100%;
+      box-shadow: 0 0 20px rgba(0, 255, 204, 0.2);
     }
-    select, input {
+
+    label, select, input, button {
+      display: block;
       width: 100%;
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+
+    select, input {
       padding: 0.5rem;
-      margin-top: 1rem;
-      font-size: 1rem;
-    }
-    button {
-      margin-top: 1rem;
-      padding: 0.7rem;
-      background: #00ffcc;
+      border-radius: 5px;
       border: none;
-      font-size: 1rem;
-      cursor: pointer;
-      color: #000;
     }
+
+    button {
+      background: var(--accent);
+      color: #000;
+      padding: 0.7rem;
+      margin-top: 1.5rem;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
     .result {
       margin-top: 1.5rem;
       font-size: 1.2rem;
+      text-align: center;
     }
-    .ads {
-      margin: 2rem 0;
-      width: 100%;
+
+    .select-row {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .select-row img {
+      height: 28px;
+    }
+
+    .theme-toggle {
+      margin-bottom: 1rem;
+      cursor: pointer;
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
+      border: 1px solid var(--accent);
+      border-radius: 8px;
+      background: transparent;
+      color: var(--accent);
     }
   </style>
 </head>
-<body>
-  <h1>CryptoConvertor</h1>
-
-  <!-- AdSense ad block -->
-  <div class="ads">
-    <ins class="adsbygoogle"
-         style="display:block; text-align:center;"
-         data-ad-client="ca-pub-8541037471423035"
-         data-ad-slot="1234567890"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
-
+<body class="dark">
+  <button class="theme-toggle" onclick="toggleTheme()">Switch Theme</button>
+  <h1>Crypto Converter</h1>
   <div class="converter">
-    <label>Amount</label>
+    <label for="amount">Amount</label>
     <input type="number" id="amount" placeholder="Enter amount" />
 
-    <label>From</label>
-    <select id="from">
+    <div class="select-row">
+      <label for="from">From</label>
+      <img id="from-img" src="" alt="crypto">
+    </div>
+    <select id="from" onchange="updateFromImage()">
       <option value="bitcoin">Bitcoin (BTC)</option>
       <option value="ethereum">Ethereum (ETH)</option>
       <option value="tether">Tether (USDT)</option>
@@ -90,8 +121,11 @@
       <option value="polkadot">Polkadot (DOT)</option>
     </select>
 
-    <label>To</label>
-    <select id="to">
+    <div class="select-row">
+      <label for="to">To</label>
+      <img id="to-img" src="" alt="fiat">
+    </div>
+    <select id="to" onchange="updateToImage()">
       <option value="usd">USD</option>
       <option value="eur">EUR</option>
       <option value="zmw">ZMW</option>
@@ -109,6 +143,42 @@
   </div>
 
   <script>
+    const cryptoImages = {
+      bitcoin: "https://cryptologos.cc/logos/bitcoin-btc-logo.png?v=025",
+      ethereum: "https://cryptologos.cc/logos/ethereum-eth-logo.png?v=025",
+      tether: "https://cryptologos.cc/logos/tether-usdt-logo.png?v=025",
+      binancecoin: "https://cryptologos.cc/logos/bnb-bnb-logo.png?v=025",
+      solana: "https://cryptologos.cc/logos/solana-sol-logo.png?v=025",
+      ripple: "https://cryptologos.cc/logos/xrp-xrp-logo.png?v=025",
+      cardano: "https://cryptologos.cc/logos/cardano-ada-logo.png?v=025",
+      dogecoin: "https://cryptologos.cc/logos/dogecoin-doge-logo.png?v=025",
+      tron: "https://cryptologos.cc/logos/tron-trx-logo.png?v=025",
+      polkadot: "https://cryptologos.cc/logos/polkadot-new-dot-logo.png?v=025"
+    };
+
+    const fiatImages = {
+      usd: "https://flagcdn.com/us.svg",
+      eur: "https://flagcdn.com/eu.svg",
+      zmw: "https://flagcdn.com/zm.svg",
+      gbp: "https://flagcdn.com/gb.svg",
+      ngn: "https://flagcdn.com/ng.svg",
+      kes: "https://flagcdn.com/ke.svg",
+      inr: "https://flagcdn.com/in.svg",
+      jpy: "https://flagcdn.com/jp.svg",
+      cad: "https://flagcdn.com/ca.svg",
+      aud: "https://flagcdn.com/au.svg"
+    };
+
+    function updateFromImage() {
+      const from = document.getElementById("from").value;
+      document.getElementById("from-img").src = cryptoImages[from];
+    }
+
+    function updateToImage() {
+      const to = document.getElementById("to").value;
+      document.getElementById("to-img").src = fiatImages[to];
+    }
+
     async function convertCrypto() {
       const amount = parseFloat(document.getElementById("amount").value);
       const from = document.getElementById("from").value;
@@ -119,6 +189,8 @@
         result.innerText = "Please enter a valid amount.";
         return;
       }
+
+      result.innerText = "Converting...";
 
       try {
         const response = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${from}&vs_currencies=${to}`);
@@ -132,11 +204,28 @@
         const rate = data[from][to];
         const converted = amount * rate;
 
-        result.innerText = `${amount} ${from.charAt(0).toUpperCase() + from.slice(1)} = ${converted.toFixed(2)} ${to.toUpperCase()}`;
+        result.innerText = `${amount} ${from.toUpperCase()} = ${converted.toFixed(2)} ${to.toUpperCase()}`;
       } catch (error) {
-        result.innerText = "Error fetching conversion rate. Please try again later.";
+        result.innerText = "Error fetching conversion rate.";
       }
     }
+
+    function toggleTheme() {
+      const body = document.body;
+      if (body.classList.contains("dark")) {
+        body.classList.remove("dark");
+        body.classList.add("light");
+      } else {
+        body.classList.remove("light");
+        body.classList.add("dark");
+      }
+    }
+
+    // Set images on load
+    window.onload = () => {
+      updateFromImage();
+      updateToImage();
+    };
   </script>
 </body>
 </html>
